Added add new task and 1.0 notification

--- a/Presentation/MainWidget.ui
+++ b/Presentation/MainWidget.ui
@@ -16,8 +16,32 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Liste</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Task selected</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0" alignment="Qt::AlignLeft">
       <widget class="QListView" name="listView"/>
+     </item>
+     <item row="1" column="1">
+      <widget class="QListView" name="listView_2"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Tasks from list</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="2">
       <layout class="QFormLayout" name="formLayout">
@@ -59,7 +83,7 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QLineEdit" name="dateDueLineEdit"/>
+        <widget class="QDateTimeEdit" name="dateTimeEdit"/>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="priorityLabel">
@@ -71,31 +95,14 @@
        <item row="4" column="1">
         <widget class="QLineEdit" name="priorityLineEdit"/>
        </item>
+       <item row="5" column="1">
+        <widget class="QPushButton" name="saveTask">
+         <property name="text">
+          <string>Add Task</string>
+         </property>
+        </widget>
+       </item>
       </layout>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Liste</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Tasks from list</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Task selected</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QListView" name="listView_2"/>
      </item>
     </layout>
    </item>
