--- a/Presentation/MainWidget.ui
+++ b/Presentation/MainWidget.ui
@@ -6,103 +6,50 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>498</width>
-    <height>409</height>
+    <width>684</width>
+    <height>673</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWidget</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Liste</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Task selected</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" alignment="Qt::AlignLeft">
+     <item>
       <widget class="QListView" name="listView"/>
      </item>
-     <item row="1" column="1">
-      <widget class="QListView" name="listView_2"/>
-     </item>
-     <item row="0" column="1">
+    </layout>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Tasks from list</string>
+        <string>Taskuri</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="2">
-      <layout class="QFormLayout" name="formLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="iDLabel">
-         <property name="text">
-          <string>ID</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="iDLineEdit"/>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="nameLabel">
-         <property name="text">
-          <string>Name</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="nameLineEdit"/>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="detailsLabel">
-         <property name="text">
-          <string>Details</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLineEdit" name="detailsLineEdit"/>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="dateDueLabel">
-         <property name="text">
-          <string>Date due</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QDateTimeEdit" name="dateTimeEdit"/>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="priorityLabel">
-         <property name="text">
-          <string>Priority</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QLineEdit" name="priorityLineEdit"/>
-       </item>
-       <item row="5" column="1">
-        <widget class="QPushButton" name="saveTask">
-         <property name="text">
-          <string>Add Task</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+     <item>
+      <widget class="QListView" name="listView_2"/>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="add_new_task_button">
+       <property name="text">
+        <string>AddNewTask</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
