Linked the data from the api to the UI; Fixed some bugs with the connection

--- a/Presentation/AddTaskWidget.ui
+++ b/Presentation/AddTaskWidget.ui
@@ -48,7 +48,7 @@
        <item row="2" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>List</string>
+          <string>ListofTasks</string>
          </property>
         </widget>
        </item>
