--- a/Presentation/AddTaskWidget.ui
+++ b/Presentation/AddTaskWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
+    <width>356</width>
     <height>435</height>
    </rect>
   </property>
@@ -32,16 +32,6 @@
         <widget class="QLabel" name="detailsLabel">
          <property name="text">
           <string>Details</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="detailsLineEdit">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
          </property>
         </widget>
        </item>
@@ -84,6 +74,9 @@
           <string>Time due</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QTextEdit" name="detailsEdit"/>
        </item>
       </layout>
      </item>
