--- a/Presentation/MainWidget.ui
+++ b/Presentation/MainWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>684</width>
-    <height>673</height>
+    <height>468</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,40 @@
       </widget>
      </item>
      <item>
-      <widget class="QListView" name="listView"/>
+      <widget class="QPushButton" name="addnewList">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>AddNewList</string>
+       </property>
+       <property name="icon">
+        <iconset theme="application-exit"/>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="listView">
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+        </font>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustToContents</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -38,20 +71,25 @@
       </widget>
      </item>
      <item>
-      <widget class="QListView" name="listView_2"/>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
       <widget class="QPushButton" name="add_new_task_button">
        <property name="text">
         <string>AddNewTask</string>
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QListView" name="listView_2">
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
     </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout"/>
    </item>
   </layout>
  </widget>
