--- a/Presentation/MainWidget.ui
+++ b/Presentation/MainWidget.ui
@@ -46,6 +46,24 @@
       </widget>
      </item>
      <item>
+      <widget class="QLineEdit" name="newListEdit">
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+        </font>
+       </property>
+       <property name="frame">
+        <bool>false</bool>
+       </property>
+       <property name="echoMode">
+        <enum>QLineEdit::Normal</enum>
+       </property>
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QListView" name="listView">
        <property name="font">
         <font>
@@ -84,6 +102,15 @@
       <widget class="QPushButton" name="add_new_task_button">
        <property name="text">
         <string>AddNewTask</string>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
+        <bool>false</bool>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
