--- a/Presentation/MainWindow.ui
+++ b/Presentation/MainWindow.ui
@@ -20,6 +20,10 @@
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QWidget" name="horizontalWidget" native="true">
+      <property name="styleSheet">
+       <string notr="true">
+</string>
+      </property>
       <layout class="QHBoxLayout" name="horizontalLayout"/>
      </widget>
     </item>
