--- a/Presentation/TasksWidgets/AddTaskWidget.ui
+++ b/Presentation/TasksWidgets/AddTaskWidget.ui
@@ -7,13 +7,28 @@
     <x>0</x>
     <y>0</y>
     <width>356</width>
-    <height>435</height>
+    <height>461</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>AddTaskWidget</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <item row="2" column="0" colspan="2">
+    <widget class="QPushButton" name="saveTask">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Add Task</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" rowspan="2" colspan="2">
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
@@ -26,7 +41,11 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="nameLineEdit"/>
+        <widget class="QLineEdit" name="nameLineEdit">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="detailsLabel">
@@ -43,7 +62,11 @@
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QComboBox" name="list_combo"/>
+        <widget class="QComboBox" name="list_combo">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="dateDueLabel">
@@ -60,13 +83,21 @@
         </widget>
        </item>
        <item row="5" column="1">
-        <widget class="QComboBox" name="prioritycombo"/>
+        <widget class="QComboBox" name="prioritycombo">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="3" column="1">
         <widget class="QCalendarWidget" name="calendarWidget"/>
        </item>
        <item row="4" column="1">
-        <widget class="QTimeEdit" name="timeEdit"/>
+        <widget class="QTimeEdit" name="timeEdit">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label">
@@ -76,33 +107,25 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QTextEdit" name="detailsEdit"/>
+        <widget class="QTextEdit" name="detailsEdit">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
      <item row="0" column="0" alignment="Qt::AlignRight">
-      <widget class="QToolButton" name="closeButton">
+      <widget class="QPushButton" name="closeButton">
        <property name="text">
-        <string>X</string>
+        <string/>
        </property>
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QPushButton" name="saveTask">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="text">
-      <string>Add Task</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
