--- a/Presentation/TasksWidgets/ViewTaskWidget.ui
+++ b/Presentation/TasksWidgets/ViewTaskWidget.ui
@@ -44,7 +44,11 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="nameEdit"/>
+        <widget class="QLineEdit" name="nameEdit">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_2">
@@ -54,7 +58,14 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QTextEdit" name="detailsEdit"/>
+        <widget class="QTextEdit" name="detailsEdit">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
@@ -64,7 +75,11 @@
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QComboBox" name="listCombo"/>
+        <widget class="QComboBox" name="listCombo">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_4">
@@ -84,7 +99,11 @@
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QTimeEdit" name="timeEdit"/>
+        <widget class="QTimeEdit" name="timeEdit">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="label_6">
@@ -94,7 +113,11 @@
         </widget>
        </item>
        <item row="5" column="1">
-        <widget class="QComboBox" name="priorityCombo"/>
+        <widget class="QComboBox" name="priorityCombo">
+         <property name="frame">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -107,16 +130,10 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="0" alignment="Qt::AlignRight|Qt::AlignBottom">
-    <widget class="QToolButton" name="toolButton">
+   <item row="0" column="0" alignment="Qt::AlignRight">
+    <widget class="QPushButton" name="toolButton">
      <property name="text">
-      <string>X</string>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>16</width>
-       <height>16</height>
-      </size>
+      <string/>
      </property>
     </widget>
    </item>
